// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WeatherList /> renders correctly 1`] = `
<DocumentFragment>
  <ul
    class="weather-list"
  >
    <li
      class="weather-list-item"
    >
      <mock-link
        to="[object Object]"
      >
        <span
          class="ui-text ui-text--body"
        >
          Austin
        </span>
        <span
          class="ui-text ui-text--body"
        />
      </mock-link>
    </li>
    <li
      class="weather-list-item"
    >
      <mock-link
        to="[object Object]"
      >
        <span
          class="ui-text ui-text--body"
        >
          Cupertino
        </span>
        <span
          class="ui-text ui-text--body"
        />
      </mock-link>
    </li>
    <li
      class="weather-list-item"
    >
      <mock-link
        to="[object Object]"
      >
        <span
          class="ui-text ui-text--body"
        >
          Orlando
        </span>
        <span
          class="ui-text ui-text--body"
        />
      </mock-link>
    </li>
    <li
      class="weather-list-item"
    >
      <mock-link
        to="[object Object]"
      >
        <span
          class="ui-text ui-text--body"
        >
          Philadelphia
        </span>
        <span
          class="ui-text ui-text--body"
        />
      </mock-link>
    </li>
    <li
      class="weather-list-item"
    >
      <mock-link
        to="[object Object]"
      >
        <span
          class="ui-text ui-text--body"
        >
          Juneau
        </span>
        <span
          class="ui-text ui-text--body"
        />
      </mock-link>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`<WeatherList /> renders correctly with current city 1`] = `
<DocumentFragment>
  <ul
    class="weather-list"
  >
    <li
      class="weather-list-item"
    >
      <mock-link
        to="/weather"
      >
        <span
          class="ui-text ui-text--body"
        >
          New York City 
          <i
            class="ui-icon ui-icon-location-arrow fas fa-location-arrow"
          />
        </span>
        <span
          class="ui-text ui-text--body"
        >
          43°
        </span>
      </mock-link>
    </li>
    <li
      class="weather-list-item"
    >
      <mock-link
        to="[object Object]"
      >
        <span
          class="ui-text ui-text--body"
        >
          Austin
        </span>
        <span
          class="ui-text ui-text--body"
        />
      </mock-link>
    </li>
    <li
      class="weather-list-item"
    >
      <mock-link
        to="[object Object]"
      >
        <span
          class="ui-text ui-text--body"
        >
          Cupertino
        </span>
        <span
          class="ui-text ui-text--body"
        />
      </mock-link>
    </li>
    <li
      class="weather-list-item"
    >
      <mock-link
        to="[object Object]"
      >
        <span
          class="ui-text ui-text--body"
        >
          Orlando
        </span>
        <span
          class="ui-text ui-text--body"
        />
      </mock-link>
    </li>
    <li
      class="weather-list-item"
    >
      <mock-link
        to="[object Object]"
      >
        <span
          class="ui-text ui-text--body"
        >
          Philadelphia
        </span>
        <span
          class="ui-text ui-text--body"
        />
      </mock-link>
    </li>
    <li
      class="weather-list-item"
    >
      <mock-link
        to="[object Object]"
      >
        <span
          class="ui-text ui-text--body"
        >
          Juneau
        </span>
        <span
          class="ui-text ui-text--body"
        />
      </mock-link>
    </li>
  </ul>
</DocumentFragment>
`;
